[package]
name = "benbot-rs"
version = "0.1.0"
authors = ["Ben Lepsch <blepsch@gmail.com"]
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
public-ip = "0.2.2"
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
serde_json = "1.0.149"
serde = "1.0.228"
reqwest = "0.13.2"
